--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="container-fluid">
                 <div class="d-flex flex-row" >
                     <a class="navbar-brand" href="#" style="height: 100%; width: 100%;">
-                        <img class="navbar-logo" src="/images/svg/flowLogo.svg">
+                        <img class="navbar-logo" src="images/svg/flowLogo.svg">
                     </a>
 
                     <div class="collapse navbar-collapse" id="navbarNavLeft">
