--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/StOe11169/Info1_Website">GitHub <img src="/images/svg/github.svg" alt="GitHub"> </a>
+                                <a class="nav-link" href="https://github.com/StOe11169/Info1_Website">GitHub <img src="images/svg/github.svg" alt="GitHub"> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-disabled="true" style="color: gainsboro"> Change Language <img src="/images/svg/globe.svg" alt=""></a>
+                                <a class="nav-link" aria-disabled="true" style="color: gainsboro"> Change Language <img src="images/svg/globe.svg" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -182,8 +182,8 @@
 
     <div class="col-6 footer-right">
         <span><a href="impressum.html">Impressum</a></span>
-        <span><a href="about.html"></a><img src="/images/svg/question-circle.svg"> About </span>
-        <span><a href="https://github.com/StOe11169/Info1_Website"><img src="/images/svg/github.svg"> GitHub</a> </span>
+        <span><a href="about.html"></a><img src="images/svg/question-circle.svg"> About </span>
+        <span><a href="https://github.com/StOe11169/Info1_Website"><img src="images/svg/github.svg"> GitHub</a> </span>
     </div>
 
 </div>
