--- a/simulatorEuler.html
+++ b/simulatorEuler.html
@@ -22,7 +22,7 @@
             <div class="container-fluid">
                 <div class="d-flex flex-row" >
                     <a class="navbar-brand" href="#" style="height: 100%; width: 100%;">
-                        <img class="navbar-logo" src="/images/svg/flowLogo.svg" alt="">
+                        <img class="navbar-logo" src="images/svg/flowLogo.svg" alt="">
                     </a>
 
 
@@ -67,10 +67,10 @@
                                 <a class="nav-link" href="about.html">About</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://github.com/StOe11169/Info1_Website">GitHub <img src="/images/svg/github.svg" alt="GitHub"> </a>
+                                <a class="nav-link" href="https://github.com/StOe11169/Info1_Website">GitHub <img src="images/svg/github.svg" alt="GitHub"> </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" aria-disabled="true" style="color: gainsboro"> Change Language <img src="/images/svg/globe.svg" alt=""></a>
+                                <a class="nav-link" aria-disabled="true" style="color: gainsboro"> Change Language <img src="images/svg/globe.svg" alt=""></a>
                             </li>
                         </ul>
                     </div>
@@ -193,8 +193,8 @@
 
         <div class="col-6 footer-right">
             <span><a href="impressum.html">Impressum</a></span>
-            <span><a href="about.html"></a><img src="/images/svg/question-circle.svg" alt="?"> About </span>
-            <span><a href="https://github.com/StOe11169/Info1_Website"><img src="/images/svg/github.svg" alt="GitHub"> GitHub</a> </span>
+            <span><a href="about.html"></a><img src="images/svg/question-circle.svg" alt="?"> About </span>
+            <span><a href="https://github.com/StOe11169/Info1_Website"><img src="images/svg/github.svg" alt="GitHub"> GitHub</a> </span>
         </div>
 
 
